--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TouchGrapic</string>
+    <string name="str_butline">선</string>
+    <string name="str_butrect">사각형</string>
+    <string name="str_butcircle">원</string>
 </resources>
